--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <body>
+        <h1>Hello World</h1>
+        <p>Hosting page for all the personal projects of Kenneth W. Mitten</p>
+
+        <p><a href="HairRenderer.html">Hair Renderer</a></p>
+    </body>
 </html>
