--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <h1>Hello World</h1>
         <p>Hosting page for all the personal projects of Kenneth W. Mitten</p>
 
-        <p><a href="HairRenderer.html">Hair Renderer</a></p>
+        <p><a href="Pages/HairRenderer.html">Hair Renderer</a></p>
     </body>
 </html>
