--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
+        <h1>Kenneth Mitten Portfolio Repo</h1>
         <p>Hosting page for all the personal projects of Kenneth W. Mitten</p>
 
         <p><a href="Pages/HairRenderer.html">Hair Renderer</a></p>
