--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <h1>Kenneth Mitten Portfolio Repo</h1>
         <p>Hosting page for all the personal projects of Kenneth W. Mitten</p>
 
+        <p><a href="SolarSystemExtra/Solar.html">Solar System</a></p>
+
         <p><a href="Pages/HairRenderer.html">Hair Renderer</a></p>
 
-        <p><a href="SolarSystemExtra/Solar.html">Hair Renderer</a></p>
     </body>
 </html>
